--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">SpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
+		<h1 class="text-center">MainSpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
@@ -71,10 +71,10 @@
 			<div class="col-md-8">
 				<h4 class="text-center">Main Technology - Software Development & DevOps Automation.</h4>
 				<h3 class="text-center">Tel
-					+234 809 268 4240; mayonator7@yahoo.com</h3>
+					+1 604 621 2247; mayonator7@yahoo.com</h3>
 				<h5 class="text-center">
-					Copyright 2022 by <a href="http://www.maintechnology.com/">Main Technology
-							WISHING YOU A MERRY CHRISTMAS
+					Copyright 2024 by <a href="https://www.linkedin.com/in/samuelmoladipo/">Main Technology
+							WISHING YOU HAPPY NEW YEAR 
 						</a>
 				</h5>
 			</div>
