--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,8 +70,9 @@
 			</div>
 			<div class="col-md-8">
 				<h4 class="text-center">Main Technology - Software Development & DevOps Automation.</h4>
-				<h3 class="text-center">Tel
-					+1 604 621 2247; mayonator7@yahoo.com</h3>
+				<h3 class="text-center">Badges
+					<a href="https://www.credly.com/users/samuel-m-oladipo/badges/">Main Credly 
+						</a>; mayonator7@yahoo.com</h3>
 				<h5 class="text-center">
 					Copyright 2024 by <a href="https://www.linkedin.com/in/samuelmoladipo/">Main Technology
 							WISHING YOU HAPPY NEW YEAR 
