--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,11 +16,11 @@
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 
-<title>Spring Boot APP with MongoDB </title>
+<title>Sam MainSpring Boot APP</title>
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">MainSpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
+		<h1 class="text-center">MainSpringBootApp Improving security frameworks in Hybrid Cloud Infrastructures</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
