--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 
 		<div class="row-md-8">
 			<div class="col-md-3">
-				<img th:src="@{/img/Man Of Steel.JPG}" alt="Man Of Steel.JPG" height="200">
+				<img th:src="@{/614267-removebg-preview.png}" alt="614267-removebg-preview.png" height="200">
 			</div>
 			<div class="col-md-8">
 				<h4 class="text-center">Main Technology - Software Development & DevOps Automation.</h4>
