--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
 						</a>; mayonator7@yahoo.com</h3>
 				<h5 class="text-center">
 					Copyright 2024 by <a href="https://www.linkedin.com/in/samuelmoladipo/">Main Technology
-							WISHING YOU HAPPY NEW 
+							WISHING YOU HAPPY NEW YEAR
 						</a>
 				</h5>
 			</div>
